<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity"
    >

    <include
        android:id="@+id/toolBar"
        layout="@layout/toolbar"
        />


    <TextView
        android:id="@+id/tvGameOver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:gravity="center"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@color/light_red"
         />
    <TextView
        android:id="@+id/tvPlayerScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_score"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        />

    <EditText
        android:id="@+id/edit_playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:background="@color/background_color"
        android:textSize="34sp"
        android:layout_gravity="center_horizontal"
        android:inputType="textCapCharacters"
        android:textColor="@color/text_color"/>

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/enter"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:background="@drawable/btn_red"
        android:textColor="@color/text_color"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/btn_try_again"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/btn_green"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/try_again"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

        <Button
            android:id="@+id/btn_home"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_yellow"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/home"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>
</LinearLayout>