<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    >
    <ImageView
        android:id="@+id/ivGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:adjustViewBounds="true"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:src="@drawable/logo_app"
        />

    <TextView
        android:id="@+id/tvBestScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/best_score"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        />
    <Button
        android:id="@+id/btn_play"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:background="@drawable/btn_red"
        android:textColor="@color/text_color"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="@string/play"
        />

    <Button
        android:id="@+id/btn_setting"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:background="@drawable/btn_green"
        android:textColor="@color/text_color"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="@string/setting"
        android:layout_marginTop="20dp"
        />
    <Button
        android:id="@+id/btn_leaderboard"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:background="@drawable/btn_yellow"
        android:textColor="@color/text_color"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="@string/leader_board"
        android:layout_marginTop="20dp"/>
</LinearLayout>